--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
@@ -6,9 +6,9 @@
     scroll-behavior: smooth;
 }
 body {
-    background-color:black;
     color: white;
     line-height: 1.6;
+    background-color: black;
 }
 
 header {
@@ -33,7 +33,7 @@ header {
 }
 
 .logo:hover {
-  color: #555;
+  color: wheat;
   transition: all 0.3s ease;
   cursor: pointer;
   margin-left: 20px;
@@ -63,12 +63,11 @@ header nav ul li a {
 
 header nav ul li a:hover {
     background-color: #555;
-    color: black;
     transform: scale(1.1);
 }
 
 .hero {
-    background: url("https://images.unsplash.com/photo-1642455509390-5fd964092a41?q=80&w=1073&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat;
+    background: url("https://images.unsplash.com/photo-1569470451072-68314f596aec?q=80&w=1331&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") no-repeat;
     background-size: cover;
     height: 100vh;
     display: flex;
@@ -84,7 +83,7 @@ header nav ul li a:hover {
 }
 
 .home-content h1 {
-    font-size: 48px;
+    font-size: 58px;
     margin-bottom: 20px;
     font-weight: 700;
     line-height: 2.2;
@@ -96,13 +95,49 @@ header nav ul li a:hover {
     margin-bottom: 30px;
 }
 
-.home-content .btn {
-    display: inline-block;
+.home-content .social-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  gap: 15px;
+  margin: 20px 0 0;
+}
+.home-content .social-links a  {
+    color: white;
+    font-size: 24px;
+    transition: color 0.3s ease;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 15px;
+    background: #333;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.home-content .social-links a:hover {
+    color: #555;
+    background: white;
+    transform: scale(1.1);
+}
+
+footer {
     background-color: #333;
     color: white;
-    padding: 10px 20px;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 20px;
+}
+
+footer p {
+    margin: 0;
+}
+
+footer a {
+    color: white;
     text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    font-weight: 700;
+    font-weight: bold;
 }
