--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
@@ -161,3 +161,87 @@ footer a {
     text-decoration: none;
     font-weight: bold;
 }
+
+.projects h2 {
+    text-align: center;
+    margin: 40px 0;
+    font-size: 36px;
+    font-weight: 700;
+}
+
+.projects .project-list {
+    display: inline-grid;
+    gap: 20px;
+}
+
+.projects .project-list-grid {
+    display: inline;
+    gap: 20px;
+} 
+
+.project-item {
+    background-color: #222;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 10px;
+    display: inline-block;
+    flex-direction: column;
+    border: 2px solid white;
+    width: 30%;
+    height: 50%;
+    gap: 10px;
+    text-align: center;
+    margin-left: 35px;
+    margin-right: 20px;
+    box-sizing: border-box;
+}
+
+
+.project-item h3 {
+    margin-bottom: 10px;
+    font-size: 24px;
+    margin-top: 10px;
+    font-weight: 600;
+    text-align: left;
+}
+
+.project-item p {
+    font-size: 16px;
+    margin-bottom: 10px;
+    text-align: left;
+}
+
+.project-item a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 12px;
+    background-color: #333;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    text-align: left;
+}
+
+.project-item img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.project-item a:hover {
+    background-color: #555;
+    transform: scale(1.1);
+}
+
+.footer-separator-container {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
