--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
@@ -162,86 +162,60 @@ footer a {
     font-weight: bold;
 }
 
-.projects h2 {
-    text-align: center;
-    margin: 40px 0;
+footer a:hover {
+    text-decoration: underline;
+}
+
+.section-title {
+    text-align: left;
     font-size: 36px;
+    margin: 20px 40px 20px;
     font-weight: 700;
 }
-
-.projects .project-list {
-    display: inline-grid;
-    gap: 20px;
+.project-list-grid {
+    display: flex;
+    flex-direction: row;
+    align-items: space-between;
+    justify-content: center;
+    margin-right: 40px;
+    margin-left: 40px;
+    margin-bottom: 95px;
 }
-
-.projects .project-list-grid {
-    display: inline;
-    gap: 20px;
-} 
 
 .project-item {
-    background-color: #222;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 10px;
-    display: inline-block;
+    background-color: gray;
+    display: flex;
     flex-direction: column;
-    border: 2px solid white;
-    width: 30%;
-    height: 50%;
-    gap: 10px;
-    text-align: center;
-    margin-left: 35px;
-    margin-right: 20px;
-    box-sizing: border-box;
+    align-items: flex-start; 
+    margin: 10px;
+    padding: 24px;
+    border-radius: 10px;
+    color: white;
 }
 
-
-.project-item h3 {
+.project-item img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    max-height: 250px;
+    object-fit: cover;
     margin-bottom: 10px;
-    font-size: 24px;
-    margin-top: 10px;
-    font-weight: 600;
-    text-align: left;
-}
-
-.project-item p {
-    font-size: 16px;
-    margin-bottom: 10px;
-    text-align: left;
 }
 
 .project-item a {
     color: white;
     text-decoration: none;
-    font-weight: bold;
-    display: inline-block;
-    margin-top: 10px;
-    padding: 8px 12px;
+    padding: 8px 16px;
     background-color: #333;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    text-align: left;
-}
-
-.project-item img {
-    width: 100%;
-    border-radius: 10px;
+    text-align: center;
+    align-items: center;
+    align-self: center;
+    padding-top: 10px;
+    margin-top: 10px;
 }
 
 .project-item a:hover {
     background-color: #555;
-    transform: scale(1.1);
-}
-
-.footer-separator-container {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 0px;
 }
