--- a/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
+++ b/Projects in Frontend/Personal Portfolio – CSS Styling Project/styles.css
@@ -186,7 +186,7 @@ footer a:hover {
     background-color: gray;
     display: flex;
     flex-direction: column;
-    align-items: flex-start; 
+    align-items: center; /* <-- Change this line */
     margin: 10px;
     padding: 24px;
     border-radius: 10px;
@@ -202,6 +202,11 @@ footer a:hover {
     margin-bottom: 10px;
 }
 
+.project-item p {
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+
 .project-item a {
     color: white;
     text-decoration: none;
@@ -209,11 +214,9 @@ footer a:hover {
     background-color: #333;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-    text-align: center;
-    align-items: center;
-    align-self: center;
-    padding-top: 10px;
-    margin-top: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .project-item a:hover {
